//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  userName String [not null]
  email String [unique, not null]
  password String [not null]
  role String [not null, default: 'User']
  favMovies UserMovieFavorite [not null]
  favSeries UserSerieFavorite [not null]
  favGenres UserGenreFavorite [not null]
  favSeasons UserSeasonFavorite [not null]
  favEpisodes UserEpisodeFavorite [not null]
  ratingsInMovie UserMovieRating [not null]
  ratingsInSerie UserSerieRating [not null]
  ratingsInSeason UserSeasonRating [not null]
  ratingsInEpisode UserEpisodeRating [not null]
  movieReviews MovieReview [not null]
  serieReviews SerieReview [not null]
  seasonReviews SeasonReview [not null]
  episodeReviews EpisodeReview [not null]
  movieReviewsUpvoted UpvoteMovieReview [not null]
  movieReviewsDownvoted DownvoteMovieReview [not null]
  serieReviewsUpvoted UpvoteSerieReview [not null]
  serieReviewsDownvoted DownvoteSerieReview [not null]
  seasonReviewsUpvoted UpvoteSeasonReview [not null]
  seasonReviewsDownvoted DownvoteSeasonReview [not null]
  episodeReviewsUpvoted UpvoteEpisodeReview [not null]
  episodeReviewsDownvoted DownvoteEpisodeReview [not null]
}

Table UserMovieRating {
  id Int [pk, increment]
  rating Float [not null]
  userId Int [not null]
  user User [not null]
  movieId Int [not null]
  movie Movie [not null]
}

Table UserSerieRating {
  id Int [pk, increment]
  rating Float [not null]
  userId Int [not null]
  user User [not null]
  serieId Int [not null]
  serie Serie [not null]
}

Table UserSeasonRating {
  id Int [pk, increment]
  rating Float [not null]
  userId Int [not null]
  user User [not null]
  seasonId Int [not null]
  season Season [not null]
}

Table UserEpisodeRating {
  id Int [pk, increment]
  rating Float [not null]
  userId Int [not null]
  user User [not null]
  episodeId Int [not null]
  episode Episode [not null]
}

Table UserMovieFavorite {
  id Int [pk, increment]
  userId Int [not null]
  movieId Int [not null]
  user User [not null]
  movie Movie [not null]
}

Table UserGenreFavorite {
  id Int [pk, increment]
  userId Int [not null]
  genreId Int [not null]
  user User [not null]
  genre Genre [not null]
}

Table UserSerieFavorite {
  id Int [pk, increment]
  userId Int [not null]
  serieId Int [not null]
  user User [not null]
  serie Serie [not null]
}

Table UserEpisodeFavorite {
  id Int [pk, increment]
  userId Int [not null]
  episodeId Int [not null]
  user User [not null]
  episode Episode [not null]
}

Table UserSeasonFavorite {
  id Int [pk, increment]
  userId Int [not null]
  seasonId Int [not null]
  user User [not null]
  season Season [not null]
}

Table Movie {
  id Int [pk, increment]
  title String [not null, default: '']
  photoSrc String [not null, default: '']
  photoSrcProd String [not null, default: '']
  trailerSrc String [not null, default: '']
  duration String [not null, default: '']
  ratingImdb Float [not null, default: 5]
  dateAired String [not null, default: '11/12/2005']
  description String [not null, default: '']
  cast CastMovie [not null]
  genres MovieGenre [not null]
  reviews MovieReview [not null]
  usersWhoBookmarkedIt UserMovieFavorite [not null]
  usersWhoRatedIt UserMovieRating [not null]
  upvoteMovieReviews UpvoteMovieReview [not null]
  downvoteMovieReviews DownvoteMovieReview [not null]
}

Table CastMovie {
  id Int [pk, increment]
  movieId Int [not null]
  actorId Int [not null]
  movie Movie [not null]
  actor Actor [not null]
}

Table MovieGenre {
  id Int [pk, increment]
  movieId Int [not null]
  genreId Int [not null]
  movie Movie [not null]
  genre Genre [not null]
}

Table MovieReview {
  id Int [pk, increment]
  content String [not null, default: '']
  rating Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userId Int [not null]
  movieId Int [not null]
  user User [not null]
  movie Movie [not null]
  upvotes UpvoteMovieReview [not null]
  downvotes DownvoteMovieReview [not null]
}

Table UpvoteMovieReview {
  id Int [pk, increment]
  userId Int [not null]
  movieId Int [not null]
  movieReviewId Int [not null]
  user User [not null]
  movie Movie [not null]
  movieReview MovieReview
}

Table DownvoteMovieReview {
  id Int [pk, increment]
  userId Int [not null]
  movieId Int [not null]
  movieReviewId Int [not null]
  user User [not null]
  movie Movie [not null]
  movieReview MovieReview
}

Table Serie {
  id Int [pk, increment]
  title String [not null, default: '']
  photoSrc String [not null, default: '']
  photoSrcProd String [not null, default: '']
  trailerSrc String [not null, default: '']
  description String [not null, default: '']
  dateAired String [not null, default: '01/01/2020']
  ratingImdb Float [not null, default: 5]
  cast CastSerie [not null]
  seasons Season [not null]
  reviews SerieReview [not null]
  genres SerieGenre [not null]
  usersWhoBookmarkedIt UserSerieFavorite [not null]
  usersWhoRatedIt UserSerieRating [not null]
  upvoteSerieReviews UpvoteSerieReview [not null]
  downvoteSerieReviews DownvoteSerieReview [not null]
}

Table SerieGenre {
  id Int [pk, increment]
  serieId Int [not null]
  genreId Int [not null]
  serie Serie [not null]
  genre Genre [not null]
}

Table CastSerie {
  id Int [pk, increment]
  serieId Int [not null]
  actorId Int [not null]
  serie Serie [not null]
  actor Actor [not null]
}

Table UpvoteSerieReview {
  id Int [pk, increment]
  userId Int [not null]
  serieId Int [not null]
  serieReviewId Int [not null]
  user User [not null]
  serie Serie [not null]
  serieReview SerieReview
}

Table DownvoteSerieReview {
  id Int [pk, increment]
  userId Int [not null]
  serieId Int [not null]
  serieReviewId Int [not null]
  user User [not null]
  serie Serie [not null]
  serieReview SerieReview
}

Table SerieReview {
  id Int [pk, increment]
  content String [not null, default: '']
  rating Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userId Int [not null]
  serieId Int [not null]
  user User [not null]
  serie Serie [not null]
  upvotes UpvoteSerieReview [not null]
  downvotes DownvoteSerieReview [not null]
}

Table Season {
  id Int [pk, increment]
  title String [not null, default: '']
  photoSrc String [not null, default: '']
  photoSrcProd String [not null, default: '']
  trailerSrc String [not null, default: '']
  description String [not null, default: '']
  dateAired String [not null, default: '01/01/1990']
  ratingImdb Float [not null, default: 5]
  serieId Int [not null, default: 1]
  serie Serie [not null]
  episodes Episode [not null]
  usersWhoBookmarkedIt UserSeasonFavorite [not null]
  usersWhoRatedIt UserSeasonRating [not null]
  reviews SeasonReview [not null]
  UpvoteSeasonReview UpvoteSeasonReview [not null]
  DownvoteSeasonReview DownvoteSeasonReview [not null]
}

Table SeasonReview {
  id Int [pk, increment]
  content String [not null, default: '']
  rating Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userId Int [not null]
  seasonId Int [not null]
  user User [not null]
  season Season [not null]
  upvotes UpvoteSeasonReview [not null]
  downvotes DownvoteSeasonReview [not null]
}

Table UpvoteSeasonReview {
  id Int [pk, increment]
  userId Int [not null]
  seasonId Int [not null]
  seasonReviewId Int [not null]
  user User [not null]
  season Season [not null]
  seasonReview SeasonReview
}

Table DownvoteSeasonReview {
  id Int [pk, increment]
  userId Int [not null]
  seasonId Int [not null]
  seasonReviewId Int [not null]
  user User [not null]
  season Season [not null]
  seasonReview SeasonReview
}

Table Episode {
  id Int [pk, increment]
  title String [not null, default: '']
  photoSrc String [not null, default: '']
  photoSrcProd String [not null, default: '']
  trailerSrc String [not null, default: '']
  description String [not null, default: '']
  duration Int [not null, default: 20]
  dateAired String [not null, default: '01/01/1990']
  ratingImdb Float [not null, default: 5]
  seasonId Int [not null]
  season Season [not null]
  usersWhoBookmarkedIt UserEpisodeFavorite [not null]
  usersWhoRatedIt UserEpisodeRating [not null]
  reviews EpisodeReview [not null]
  upvoteEpisodeReviews UpvoteEpisodeReview [not null]
  downvoteEpisodeReviews DownvoteEpisodeReview [not null]
}

Table EpisodeReview {
  id Int [pk, increment]
  content String [not null, default: '']
  rating Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
  userId Int [not null]
  episodeId Int [not null]
  user User [not null]
  episode Episode [not null]
  upvotes UpvoteEpisodeReview [not null]
  downvotes DownvoteEpisodeReview [not null]
}

Table UpvoteEpisodeReview {
  id Int [pk, increment]
  userId Int [not null]
  episodeId Int [not null]
  episodeReviewId Int [not null]
  user User [not null]
  episode Episode [not null]
  episodeReview EpisodeReview
}

Table DownvoteEpisodeReview {
  id Int [pk, increment]
  userId Int [not null]
  episodeId Int [not null]
  episodeReviewId Int [not null]
  user User [not null]
  episode Episode [not null]
  episodeReview EpisodeReview
}

Table Genre {
  id Int [pk, increment]
  name String [not null, default: '']
  movies MovieGenre [not null]
  series SerieGenre [not null]
  usersWhoBookmarkedIt UserGenreFavorite [not null]
}

Table Actor {
  id Int [pk, increment]
  fullname String [not null]
  role String [not null, default: 'Actor']
  starredMovies CastMovie [not null]
  starredSeries CastSerie [not null]
}

Ref: UserMovieRating.userId > User.id [delete: Cascade]

Ref: UserMovieRating.movieId > Movie.id [delete: Cascade]

Ref: UserSerieRating.userId > User.id [delete: Cascade]

Ref: UserSerieRating.serieId > Serie.id [delete: Cascade]

Ref: UserSeasonRating.userId > User.id [delete: Cascade]

Ref: UserSeasonRating.seasonId > Season.id [delete: Cascade]

Ref: UserEpisodeRating.userId > User.id [delete: Cascade]

Ref: UserEpisodeRating.episodeId > Episode.id [delete: Cascade]

Ref: UserMovieFavorite.userId > User.id [delete: Cascade]

Ref: UserMovieFavorite.movieId > Movie.id [delete: Cascade]

Ref: UserGenreFavorite.userId > User.id [delete: Cascade]

Ref: UserGenreFavorite.genreId > Genre.id [delete: Cascade]

Ref: UserSerieFavorite.userId > User.id [delete: Cascade]

Ref: UserSerieFavorite.serieId > Serie.id [delete: Cascade]

Ref: UserEpisodeFavorite.userId > User.id [delete: Cascade]

Ref: UserEpisodeFavorite.episodeId > Episode.id [delete: Cascade]

Ref: UserSeasonFavorite.userId > User.id [delete: Cascade]

Ref: UserSeasonFavorite.seasonId > Season.id [delete: Cascade]

Ref: CastMovie.movieId > Movie.id [delete: Cascade]

Ref: CastMovie.actorId > Actor.id [delete: Cascade]

Ref: MovieGenre.movieId > Movie.id [delete: Cascade]

Ref: MovieGenre.genreId > Genre.id [delete: Cascade]

Ref: MovieReview.userId > User.id [delete: Cascade]

Ref: MovieReview.movieId > Movie.id [delete: Cascade]

Ref: UpvoteMovieReview.userId > User.id [delete: Cascade]

Ref: UpvoteMovieReview.movieId > Movie.id [delete: Cascade]

Ref: UpvoteMovieReview.movieReviewId > MovieReview.id [delete: Cascade]

Ref: DownvoteMovieReview.userId > User.id [delete: Cascade]

Ref: DownvoteMovieReview.movieId > Movie.id [delete: Cascade]

Ref: DownvoteMovieReview.movieReviewId > MovieReview.id [delete: Cascade]

Ref: SerieGenre.serieId > Serie.id [delete: Cascade]

Ref: SerieGenre.genreId > Genre.id [delete: Cascade]

Ref: CastSerie.serieId > Serie.id [delete: Cascade]

Ref: CastSerie.actorId > Actor.id [delete: Cascade]

Ref: UpvoteSerieReview.userId > User.id [delete: Cascade]

Ref: UpvoteSerieReview.serieId > Serie.id [delete: Cascade]

Ref: UpvoteSerieReview.serieReviewId > SerieReview.id [delete: Cascade]

Ref: DownvoteSerieReview.userId > User.id [delete: Cascade]

Ref: DownvoteSerieReview.serieId > Serie.id [delete: Cascade]

Ref: DownvoteSerieReview.serieReviewId > SerieReview.id [delete: Cascade]

Ref: SerieReview.userId > User.id [delete: Cascade]

Ref: SerieReview.serieId > Serie.id [delete: Cascade]

Ref: Season.serieId > Serie.id [delete: Cascade]

Ref: SeasonReview.userId > User.id [delete: Cascade]

Ref: SeasonReview.seasonId > Season.id [delete: Cascade]

Ref: UpvoteSeasonReview.userId > User.id [delete: Cascade]

Ref: UpvoteSeasonReview.seasonId > Season.id [delete: Cascade]

Ref: UpvoteSeasonReview.seasonReviewId > SeasonReview.id [delete: Cascade]

Ref: DownvoteSeasonReview.userId > User.id [delete: Cascade]

Ref: DownvoteSeasonReview.seasonId > Season.id [delete: Cascade]

Ref: DownvoteSeasonReview.seasonReviewId > SeasonReview.id [delete: Cascade]

Ref: Episode.seasonId > Season.id [delete: Cascade]

Ref: EpisodeReview.userId > User.id [delete: Cascade]

Ref: EpisodeReview.episodeId > Episode.id [delete: Cascade]

Ref: UpvoteEpisodeReview.userId > User.id [delete: Cascade]

Ref: UpvoteEpisodeReview.episodeId > Episode.id [delete: Cascade]

Ref: UpvoteEpisodeReview.episodeReviewId > EpisodeReview.id [delete: Cascade]

Ref: DownvoteEpisodeReview.userId > User.id [delete: Cascade]

Ref: DownvoteEpisodeReview.episodeId > Episode.id [delete: Cascade]

Ref: DownvoteEpisodeReview.episodeReviewId > EpisodeReview.id [delete: Cascade]